S13n: Fix regression from SimpleURLLoader port in ContextualSuggestionsService

The way the upload was setup was making the SimpleURLLoader grumpy, so do
it by the book. It's actually very easy to do that, contrary to my original
thinking.

Bug: 855159
Change-Id: Ie4522bfeb541ed955577cf3120ce4f0d12576285
Reviewed-on: https://chromium-review.googlesource.com/1110701
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570506}
Former-commit-id: 5e2e849c4ceb352c1a1780ef54d22302789ca9e9